# kindly-rss-reader

./: .dockerignore  .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.armv6  Dockerfile.armv7  LICENSE  Makefile  README.md  config.json  install_docker.sh
Dockerfiles/: Dockerfile  Dockerfile.armv6  Dockerfile.armv7  Dockerfile.armv8  Dockerfile.build  Dockerfile.x86_64
assets/: logo.xcf
config/: config.json
migrations/: 20241230_article.sql  20241230_feed.sql  migrations.sql
src/: config.rs  main.rs  router.rs  state.rs  tracing.rs
src/controllers/: add_new_feed.rs  add_new_feed_form.rs  get_article.rs  get_article_list.rs  get_feed_list.rs  mod.rs  not_found.rs  rss.rs
src/controllers/config/: mod.rs  set_dark_theme.rs  set_zoom.rs
src/controllers/feed/: add_new_feed.rs  add_new_feed_form.rs  delete_feed.rs  get_article.rs  get_article_list.rs  get_feed_list.rs  mod.rs
src/middlewares/: error_handling_middleware.rs  mod.rs
src/models/: article.rs  channel.rs  feed.rs  mod.rs  parsed_feed.rs  persisted_config.rs
src/providers/: mod.rs
src/providers/favicon/: mod.rs  (+2 more)
src/repositories/: error.rs  init.rs  mod.rs
src/services/: mod.rs
src/view_models/: article_list_item.rs  error.rs  mod.rs
static/: not_found.html
static/css/: article.css  article_dark_theme.css  article_light_theme.css  article_list.css  dark_theme.css  general.css  light_theme.css
static/js/: article_controls.js
templates/: article.html  article_list.html  common_head.html  dialog.html  error.html  feed_add.html  feed_list.html  not_found.html  toolbar.html
(+32 files in other folders)
