[package]
name = "kindle-rss-reader"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atom_syndication = "0.12.2"
axum = { version = "0.7.5", features = ["macros"] }
axum_static = "1.7.1"
chrono = { version = "0.4.39", features = ["serde"] }
envy = "0.4.2"
minijinja = { version = "2.0.2", features = ["loader"] }
regex = "1.11.1"
reqwest = { version = "0.12.5", default-features = false, features=["rustls-tls"] }
rss = "2.0.8"
scraper = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.138"
sqlite = "0.36.1"
thiserror = "2.0.11"
tokio = { version = "1.38.2", features = ["fs", "io-util", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
